# Bouncing-DVD-Logo

./: CMakeLists.txt  CMakePresets.json  README.md  callbacks.h  glfw_utilities.h  image_utilities.h  main.cpp  settings.h  utilities.h  vcpkg.json
include/: callbacks.h  glfw_utilities.h  image_utilities.h  mesh.h  opengl_utilities.h  random_utilities.h  settings.h  shader_utilities.h  vertex.h
shaders/: fragment.glsl  vertex.glsl
src/: callbacks.cpp  glfw_utilities.cpp  image_utilities.cpp  main.cpp  opengl_utilities.cpp  random_utilities.cpp  shader_utilities.cpp
